--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +8,21 @@
     <link rel="stylesheet" href="estilos/style.css">
     <title>Projeto Redes Sociais</title>
 </head>
+
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" frameborder="0" name="tela" id="tela"></iframe>
+            <iframe src="home.html" frameborder="0" name="tela" id="tela">Seu navegador não é compatível com isso.</iframe>
         </section>
         <section id="redes-sociais">
-
+            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt=""></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt=""></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a> <br>
         </section>
     </main>
 </body>
+
 </html>
